--- a/projects/1.16/assets/natures-minerals/natureminerals/lang/zh_cn.json
+++ b/projects/1.16/assets/natures-minerals/natureminerals/lang/zh_cn.json
@@ -65,6 +65,9 @@
   "modifier.natureminerals.astral_speed": "星速",
   "modifier.natureminerals.astral_speed.flavor": "亮晶晶！",
   "modifier.natureminerals.astral_speed.description": "潜行时提升采掘速度和移动速度",
+  "modifier.natureminerals.nether_crushing": "地狱摧毁者",
+  "modifier.natureminerals.nether_crushing.flavor": "如同地狱！",
+  "modifier.natureminerals.nether_crushing.description": "在地狱中提升采掘速度",
   "modifier.natureminerals.electrifying": "雷厉风行",
   "modifier.natureminerals.electrifying.flavor": "一路火花带闪电！",
   "modifier.natureminerals.electrifying.description": "攻击时在目标位置召唤一道闪电，且雷雨天气时提升采掘速度",
